--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,8 @@
 }
 
 .glassmorphism {
-  background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(10px);
-  border: 1px solid rgba(255, 255, 255, 0.2);
+  background: lightgray;
+  backdrop-filter: blur(60px);
 }
 
 .pagination {
